syntax = "proto3";
package shared_log;

option go_package = "github.com/nathanieltornow/PMLog/shared_log/shared_logpb";

service SharedLog {
  rpc Append(AppendRequest) returns (AppendResponse);
  rpc AsyncAppend(stream AppendRequest) returns (stream AppendResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Trim(TrimRequest) returns (TrimResponse);
}

message AppendRequest {
  string record = 1;
  uint32 color = 2;
  uint32 token = 3;
}

message AppendResponse {
  uint64 gsn = 1;
  uint32 token = 2;
}

message ReadRequest {
  uint64 gsn = 1;
}

message ReadResponse {
  uint64 gsn = 1;
  string record = 2;
}

message TrimRequest {
  uint64 gsn = 1;
}

message TrimResponse {}